# fleet-net

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  SOCKET_IO_MIGRATION.md  TASK_LIST.md  TODO.md  biome.json  jest.config.js  package-lock.json  package.json  rustfmt.toml  tsconfig.base.json  tsconfig.json
.claude/agents/: rust-code-reviewer.md
.github/workflows/: claude-code-review.yml
client/: .gitignore  tsconfig.json
client/main/network/: tcp-client.ts
crates/fleet-net-audio/: Cargo.toml
crates/fleet-net-client/: Cargo.toml  tauri.conf.json
crates/fleet-net-client/src-tauri/: tauri.conf.json
crates/fleet-net-client/src-tauri/src/: connection.rs  main.rs  radio.rs
crates/fleet-net-client/ui/: index.html
crates/fleet-net-common/: Cargo.toml
crates/fleet-net-common/src/: audio.rs  channel.rs  error.rs  lib.rs  logging.rs  permission.rs  role.rs  session.rs  types.rs  user.rs
crates/fleet-net-protocol/: Cargo.toml
crates/fleet-net-protocol/src/: connection.rs  hmac.rs  key_manager.rs  lib.rs  message.rs  packet.rs  test_helpers.rs  tls.rs  version.rs
crates/fleet-net-server/: Cargo.toml
crates/fleet-net-server/src/: main.rs  server.rs
crates/fleet-test-support/: Cargo.toml
crates/fleet-test-support/src/: crypto.rs  io.rs  lib.rs  net.rs  time.rs  tls.rs
docs/: FLEET-NET.md  TASK-LIST.md
server/: .gitignore  session-manager.ts  tsconfig.json
server/network/: socket-server.ts  tcp-server.ts
shared/: packet.test.ts  packet.ts  session.ts  tsconfig.json  validation.ts
shared/protocol/: messages.ts  protocol-handler.ts
shared/types/: socket-events.ts
tests/integration/client-server/: tcp-connection.test.ts
tests/integration/server/: tcp-integration.test.ts
tests/unit/client-main/network/: tpc-client.test.ts
tests/unit/server/: session-manager.test.ts
tests/unit/server/network/: socket-server.test.ts  tcp-server.test.ts
tests/unit/shared/protocol/: protocol-handler.test.ts
