[package]
name = "fleet-net-common"
version = "0.1.0"
edition = "2021"
authors = ["Victoria Beauray Sagady <cephypi@pm.me>"]
description = "Common utilities and types for Fleet Net"
license = "AGPL-3"

[dependencies]
# Use workspace dependencies where possible
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# Additional common dependencies
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
